Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17098

DATE -> DATETIME replication conversion not working, even in ALL_NON_LOSSY mode

    XMLWordPrintable

Details

    Description

      When having a DATE column on the master, a DATETIME column on the slave, and binlog_format=ROW, inserting into the table fails on the salve with:

      Last_SQL_Error: Column 1 of table 'test.t1' cannot be converted from type 'date' to type 'datetime'

      even with slave_type_conversions=ALL_NON_LOSSY, even though a conversion from a DATE to a DATETIME should be a lossles operation.

      In the MySQL 5.6 manual this conversion is listed as "not supported before 5.5.3". In the 5.7 and 5.8 versions of the manual this paragraph has been removed, but still DATE and DATETIME are missing from the list of supported operations.

      Our own documentation doesn't seem to mention supported conversion types at all.

      https://dev.mysql.com/doc/refman/5.6/en/replication-features-differing-tables.html

      Attachments

        Issue Links

          Activity

            People

              Elkin Andrei Elkin
              hholzgra Hartmut Holzgraefe
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4d 2.5h
                  4d 2.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.