MDEV-17098 DATE -> DATETIME replication conversion not working, even in ALL_NON_LOSSY mode

Opened up MYSQL_TYPE _DATETIME{,2} <-> _NEWDATE conversions for replication.